# appy

./: .env.docker  .gitignore  .pre-commit-config.yaml  .tox  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: coverage-update.yml  lint-run.yml  lint_me.yml  test\_coverage.yaml  test_coverage.yaml  test_me.yml
src/: app.py  appy.py  config.py  errors_handler.py  main.py
src/blueprints/: bundler.py  error_handler.py  posts.py  projects.py  root.py  simple_blueprint.py  users.py
src/routes/: posts.py  projects.py  root.py  users.py
tests/: fixtures.py  test_app.py  test_me.py
