[tool.poetry]
name = "appy"
version = "0.1.0"
description = "An appy on Flask"
authors = ["Bruno Peixoto <brunolnetto@gmail.com>"]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
flask = "^2.2.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.189"
pre-commit = "^2.20.0"
black = "^22.12.0"
flake8 = "^6.0.0"
coverage = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

